--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "vite build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
