--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,15 +21,14 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
     "react-router-dom": "^7.5.2",
-    "react-toastify": "^11.0.5",
-    "vite": "^6.3.3"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
-    "vite": "^6.3.3"
+    "vite": "^6.3.5"
   },
   "engines": {
     "node": "22.x"
