--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "engines": {
     "node": "22.x"
   },
+  "scripts": {
+    "build": "vite build"
+  },
+  
   "dependencies": {
     "cloudinary": "^1.41.3",
     "dotenv": "^16.5.0",
