--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
             "src": "frontend/package.json",
             "use": "@vercel/static-build",
             "config": {
-                "distDir": "frontend/dist",
-                "buildCommand": "npm run build"
+                "distDir": "dist"
             }
         }
     ],
